--- a/blocks/anchor-nav/anchor-nav.css
+++ b/blocks/anchor-nav/anchor-nav.css
@@ -114,7 +114,7 @@
     bottom: -9px;
     width: 80%;
     height: 2.5px;
-    background-color: var(--dark-red-color);
+    background-color: var(--text-red-color);
     transform: scaleX(0);
     transform-origin: center;
     transition: transform 0.2s ease;
@@ -146,7 +146,7 @@
     border-radius: 2.4em;
     padding: 0.7em 1.2em;
     background-color: #902a2c !important;
-    color: #fff !important;
+    color: var(--color-white) !important;
     font-weight: 700;
     text-align: center;
     line-height: 1;
