--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -29,7 +29,7 @@
   a.button.primary:hover, a.button.primary:focus, button.primary:hover, button.primary:focus {
     background-color: var(--btn-color-red);
     border-color: var(--btn-color-red);
-    color: var(--btn-color-white);
+    color: var(--color-white);
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .5);
 }
 }
