--- a/blocks/cc-hero-slider/cc-hero-slider.css
+++ b/blocks/cc-hero-slider/cc-hero-slider.css
@@ -51,7 +51,7 @@ main>div.section > .cc-hero-slider-wrapper {
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--black-gradient-mobile);
+  background: var(--gradient-black);
   z-index: 2;
   pointer-events: none;
 }
@@ -84,7 +84,7 @@ main>div.section > .cc-hero-slider-wrapper {
 }
 
 .cc-hero-slider-content h2 {
-  color: var(--white);
+  color: var(--color-white);
   font-size: var(--heading-font-size-xl);
   font-weight: 700;
   line-height: 1.2;
@@ -94,7 +94,7 @@ main>div.section > .cc-hero-slider-wrapper {
 }
 
 .cc-hero-slider-item .cc-hero-slider-content h3 {
-  color: var(--white);
+  color: var(--color-white);
   font-size: var(--body-font-size-l);
   margin: 0 0 var(--spacing-s);
   text-shadow: 0 1px 3px rgba(0 0 0 / 30%);
@@ -109,7 +109,7 @@ main>div.section > .cc-hero-slider-wrapper {
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  background: var(--white);
+  background: var(--color-white);
   color: var(--text-color);
   
   font-size: var(--body-font-size-m);
@@ -185,7 +185,7 @@ main>div.section > .cc-hero-slider-wrapper {
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--black-gradient);
+    background: var(--gradient-black-90);
     z-index: 2;
     pointer-events: none;
   }
